--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./models/world.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
-    <script src="./models/static-object.class.js"></script>
+    <script src="./models/background-object.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/puffer-fish.class.js"></script>
     <script src="./models/jelly-fish.class.js"></script>
