--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <script src="./models/puffer-fish.class.js"></script>
     <script src="./models/jelly-fish.class.js"></script>
     <script src="./models/coin.class.js"></script>
+    <script src="./models/level.class.js"></script>
+    <script src="./models/keyboard.class.js"></script>
     <script src="./models/poison.class.js"></script>
+    <script src="./js/level1.js"></script>
     <script src="./js/game.js"></script>
 </head>
 <body onload="init()">
