first sound effect and endboss added

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <script src="./models/level.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/poison.class.js"></script>
+    <script src="./models/endboss.class.js"></script>
     <script src="./js/level1.js"></script>
     <script src="./js/game.js"></script>
 </head>
 <body onload="init()">
     <h1>Sharkie</h1>
 
-    <canvas id="canvas" onkeydown="moveCharacter()" width="720" height="480">
+    <canvas id="canvas"  width="720" height="480">
 
     </canvas>
 </body>
