--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./models/poison.class.js"></script>
     <script src="./models/heart.class.js"></script>
     <script src="./models/endboss.class.js"></script>
+    <script src="./models/status-bar.class.js"></script>
     <script src="./js/level1.js"></script>
     <script src="./js/game.js"></script>
 </head>
