--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Sharkie</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./models/world.class.js"></script>
+    <script src="./models/keyboard.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
+    <script src="./models/static-object.class.js"></script>
     <script src="./models/enemy.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/character.class.js"></script>
@@ -15,7 +17,6 @@
     <script src="./models/jelly-fish.class.js"></script>
     <script src="./models/coin.class.js"></script>
     <script src="./models/level.class.js"></script> 
-    <script src="./models/keyboard.class.js"></script>
     <script src="./models/poison.class.js"></script>
     <script src="./models/heart.class.js"></script>
     <script src="./models/endboss.class.js"></script>
