--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./models/healthbar.class.js"></script>
     <script src="./models/poisonbar.class.js"></script>
     <script src="./models/coinbar.class.js"></script>
+    <script src="./models/throwable-object.class.js"></script>
     <script src="./js/level1.js"></script>
     <script src="./js/game.js"></script>
 </head>
