endboss healthbar added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./models/healthbar.class.js"></script>
     <script src="./models/poisonbar.class.js"></script>
     <script src="./models/coinbar.class.js"></script>
+    <script src="./models/endboss-mini.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/throwable-object.class.js"></script>
