--- a/index.html
+++ b/index.html
@@ -32,8 +32,17 @@
 <body onload="init()">
     <h1>Sharkie</h1>
 
-    <canvas id="canvas"  width="720" height="480">
-
-    </canvas>
+    <canvas id="canvas"  width="720" height="480"></canvas>
+    <section class="explication">
+        <div class="movement-bottons-container">
+            <img class="title-img" src="img/6.Botones/Tittles/Move title.png" alt="">
+            <img src="img/6.Botones/Key/arrow keys.png" alt="">
+        </div>
+        <div class="attack-bottons-container">
+            <img class="title-img" src="img/6.Botones/Tittles/Attack tittle.png" alt="">
+            <img src="img/6.Botones/Key/Space Bar key.png" alt="">
+            <img src="img/6.Botones/Key/D key.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
