--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <script src="./js/game.js"></script>
 </head>
 <body onload="init()">
+    <div class="opacity-container"></div>
     <h1>Sharkie</h1>
-
+    <button onclick="start()">Start</button>
+    
     <canvas id="canvas"  width="720" height="480"></canvas>
     <section class="explication">
         <div class="movement-bottons-container">
@@ -44,5 +46,6 @@
             <img src="img/6.Botones/Key/D key.png" alt="">
         </div>
     </section>
+    <button onclick="stop()">Stop</button>
 </body>
 </html>
