you win and game over added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body>
     <div class="opacity-container"></div>
     <h1>Sharkie</h1>
+    <h2 id="instructions">Instructions</h2>
     <img id="start-button" onclick="init()" src="img/6.Botones/Start/2.png" alt="">
     <canvas id="canvas"  width="720" height="480"></canvas>
     <section class="explication" id="explication">
