jsdoc added besides world

--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
             <img src="img/6.Botones/Key/D key.png" alt="">
         </div>
     </section>
+    <section class="cannot" id="cannot">
+        <span>Sorry, this game cannot be played on mobile devices</span>
+    </section>
 </body>
 </html>
