--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sharkie</title>
     <link rel="stylesheet" href="./style.css">
@@ -54,6 +55,6 @@
     </section>
     <section class="cannot" id="cannot">
         <span>Sorry, this game cannot be played on mobile devices</span>
-    </section>
+    </section>z
 </body>
 </html>
